add, delete, check/uncheck

--- a/src/sass/abstract/mixins.scss
+++ b/src/sass/abstract/mixins.scss
@@ -5,7 +5,7 @@ $themes: (
     bgImageMobile: $img-light-mobile,
     bgTodoContainer: $color-white,
     borderColor: $color-gray-2,
-    shadow: $shadow,
+    shadow: $shadow-light,
     fcRegular: $color-gray-5,
     fcActive: $color-gray-5,
     fcSelected: $color-primary,
@@ -17,7 +17,7 @@ $themes: (
     bgImageMobile: $img-dark-mobile,
     bgTodoContainer: $color-blue-2,
     borderColor: $color-blue-6,
-    shadow: $shadow,
+    shadow: $shadow-dark,
     fcRegular: $color-blue-3,
     fcActive: $color-blue-4,
     fcSelected: $color-primary,
