--- a/src/sass/layout/layout.scss
+++ b/src/sass/layout/layout.scss
@@ -8,6 +8,7 @@
   grid-template-columns: 1fr 87vw 1fr;
   grid-template-rows: repeat(8, 3.7vh) auto 1fr;
   min-height: 100vh;
+  transition: background-color 0.6s ease-in-out;
 
   @include themed() {
     background-color: t('bg');
@@ -18,6 +19,7 @@
   grid-area: header;
   grid-column: 1 / span 3;
   grid-row: 1 / span 8;
+  transition: background-image 0.6s ease-in-out;
 
   @include themed() {
     background-image: t('bgImageMobile');
