--- a/src/sass/pages/todo.scss
+++ b/src/sass/pages/todo.scss
@@ -4,6 +4,8 @@
   box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.5);
   min-height: 3.8rem;
   min-width: 100%;
+  transition: color 0.6s ease-in-out, background-color 0.6s ease-in-out,
+    box-shadow 0.6s ease-in-out;
 
   @include themed() {
     background-color: t('bgTodoContainer');
@@ -15,8 +17,9 @@
   align-items: center;
   display: flex;
   gap: 1.1rem;
-  height: 3.8rem;
+  min-height: 3.8rem;
   padding: 0.5rem 1rem;
+  transition: border-color 0.6s ease-in-out;
 
   @include themed() {
     border-bottom: 1px solid t('borderColor');
@@ -28,10 +31,16 @@
   */
 }
 
-.todo__row .button-transparent {
+.todo__row .todo-description {
+  width: 70%;
+}
+
+.todo__row .button-transparent,
+.form__container .button-transparent {
   height: 1.5rem;
-  transition: border 700ms ease-in-out;
+  transition: border 600ms ease-in-out;
   width: 1.5rem;
+  position: relative;
 
   @include themed() {
     border: 1px solid t('borderColor');
@@ -56,6 +65,10 @@
       color: t('fcActive');
     }
   }
+
+  & .todo__filter {
+    display: none;
+  }
 }
 
 .todo__filter {
@@ -63,11 +76,50 @@
   gap: 1.2rem;
 }
 
-.todo__row > * {
+.todo__filter-mobile {
+  display: flex;
+  justify-content: space-around;
+  padding-inline: 10px;
+  border-radius: 0.3125rem;
+  min-height: 3rem;
+
+  @include themed() {
+    background-color: t('bgTodoContainer');
+    color: t('fcRegular');
+  }
+
+  & button {
+    @include themed() {
+      color: t('fcInactive');
+    }
+  }
+
+  & button:hover {
+    @include themed() {
+      color: t('fcActive');
+    }
+  }
 }
 
-.todo__row-check {
+@media (min-width: 45em) {
+  .todo__list-actions .todo__filter {
+    display: flex;
+  }
+  .todo__row .todo-description {
+    width: 80%;
+  }
+
+  .todo__filter-mobile {
+    display: none;
+  }
+
+  .todo__filter-mobile {
+    display: none;
+  }
 }
 
-.todo__row-text {
+@media (min-width: 65em) {
+  .todo__row .todo-description {
+    width: 85%;
+  }
 }
